<resources>
    <string name="app_name">Session Keeper</string>
    <string name="strGameListBtnLabel">Games</string>
    <string name="strPlayerListBtnLabel">Players</string>
    <string name="strMainMenuHint">You should have created games and players before starting a session. This will be enforced sooner or later!</string>
    <string name="strStartSessionBtnLabel">Start Session!</string>
    <string name="strPlaceholder">lorem ipsum</string>
    <string name="strTxtNameHint">Name</string>
    <string name="strTxtPublisherHint">Publisher</string>
    <string name="strTxtAuthorHint">Author</string>
    <string name="strTxtYearHint">Year Published</string>
    <string name="strBtnEditLabel">edit</string>
    <string name="StrBtnSaveLabel">save</string>
    <string name="debug">debug Text lorem androidus</string>
    <string name="strTxtNoGamesHint">No. of Games played</string>
    <string name="strTxtPhoneNrHint">Phone Number</string>
    <string name="strTxtAgeHint">Age</string>
    <string name="strMenuNew">new</string>
    <string name="strNewGameMsg">creating new Game</string>
    <string name="strNewPlayerMsg">creating new player</string>
    <string name="strBtnDeleteLabel">delete</string>
    <string name="txtvGameSpinnerLabel">Game</string>
    <string name="txtvPlayerSpinnerLabel">select player</string>
    <string name="StrDateDebug">87.87.8965 19.00.00</string>
    <string name="txtvDateLabel">date</string>
    <string name="strBtnSaveSessionLabel">save session</string>
    <string name="btnScoreAddLabel">add</string>
    <string name="btnScoreDeleteLabel">DELETE</string>
    <string name="scoreValueHint">score Value</string>
    <string name="btnCancelSessionLabel">cancel</string>
    <string name="btnScoreScoreLabel">Score</string>
    <string name="btnScorePhone">phone</string>
    <string name="btnSessionPhotoLabel">take a Photo(activity)</string>
    <string name="strPhotoBtnLabel">take photos</string>
    <string name="strPhoneNumberURIprefix">tel:</string>
    <string name="errNotAdded">selected Player not added to game</string>
    <string name="strNoPlayers">no players added</string>
    <string name="errAlreadyAdded">already added</string>
</resources>
