<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/player_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.chusek.sessionkeeper.gui.PlayerActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtPlayerName"
        android:hint="@string/strTxtNameHint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtAge"
        android:hint="@string/strTxtAgeHint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtPhoneNr"
        android:hint="@string/strTxtPhoneNrHint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtNoGames"
        android:hint="@string/strTxtNoGamesHint" />

    <Button
        android:text="@string/StrBtnSaveLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSavePlayer" />

    <Button
        android:text="@string/strBtnDeleteLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnDeletePlayer" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtvPlayer"
        android:visibility="invisible"
        android:text="@string/debug" />

</LinearLayout>
