<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.chusek.sessionkeeper.gui.GameActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtGameName"
        android:hint="@string/strTxtNameHint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtPublisher"
        android:hint="@string/strTxtPublisherHint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtAuthor"
        android:hint="@string/strTxtAuthorHint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtYear"
        android:hint="@string/strTxtYearHint" />

    <Button
        android:text="@string/StrBtnSaveLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSaveGame" />

    <Button
        android:text="@string/strBtnDeleteLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnDeleteGame" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtvGame"
        android:visibility="invisible"
        android:text="@string/debug" />
</LinearLayout>
